# scrape-api-docs

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.api  FEATURES.md  LICENSE  Makefile  POETRY_SETUP.md  README.md  STREAMLIT_UI_GUIDE.md  docker-compose.api.yml  docker-compose.yml  pyproject.toml  requirements-api.txt  scrape.py
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd.yml  security-scan.yml
config/: alerts.yml  default.yaml  prometheus.yml
docker/nginx/: nginx.conf
docker/postgres/: init.sql
docs/: ASYNC_QUICK_START.md  EXPORT_USAGE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VALIDATION_REPORT.md  JAVASCRIPT_RENDERING.md  JSON_EXPORT_GUIDE.md  PACKAGING.md  PHASE1_IMPLEMENTATION.md  PHASE2_ASYNC_SUMMARY.md  PHASE3_SUMMARY.md  POETRY_UPDATE_SUMMARY.md  QUICK_START.md  QUICK_START_JS.md  README.md  RELEASE_NOTES_STOPLIGHT.md  STOPLIGHT_ARCHITECTURE_RESEARCH.md  STOPLIGHT_IMPLEMENTATION_SUMMARY.md  STOPLIGHT_QUICK_REFERENCE.md  STOPLIGHT_SCRAPING.md  TEST_SUMMARY_STOPLIGHT.md  USER_AGENT_GUIDE.md  github-api-research.md  github-integration-plan.md  github-scraper-implementation.md  github-scraper-summary.md  github-scraping-guide.md
docs/api/: IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md
docs/architecture/: 00-system-overview.md  01-fastapi-architecture.md  02-async-refactor-plan.md  03-javascript-rendering.md  04-export-formats.md  05-deployment-architecture.md  06-database-schema.md  README.md
docs/deployment/: DEPLOYMENT_GUIDE.md  QUICK_START.md
docs/features/: README.md  TECHNICAL_SPECIFICATIONS.md
docs/optimization/: README.md
examples/: README.md  export_example.py  github_scraper_example.py  stoplight_example.py
examples/auth/: auth_manager.py
examples/caching/: cache_manager.py
examples/config/: SETUP_GUIDE.md  auth_credentials.example.json  scraper_config.yaml
examples/integration/: requirements.txt  scraper_integration.py
examples/rate-limiting/: rate_limiter.py
k8s/: deployment.yml  ingress.yml  namespace.yml  redis-statefulset.yml  secrets.yml  worker-deployment.yml
scripts/: run_api.sh
src/scrape_api_docs/: __init__.py  __main__.py  async_client.py  async_http.py  async_queue.py  async_rate_limiter.py  async_scraper.py  async_scraper_wrapper.py  config.py  exceptions.py  github_scraper.py  hybrid_renderer.py  js_renderer.py  logging_config.py  playwright_pool.py  robots.py  scraper.py  security.py  spa_detector.py  stoplight_scraper.py  streamlit_app.py  user_agents.py
src/scrape_api_docs/api/: __init__.py  dependencies.py  main.py  middleware.py
src/scrape_api_docs/api/background/: __init__.py
src/scrape_api_docs/api/models/: __init__.py  requests.py  responses.py
src/scrape_api_docs/api/routers/: __init__.py  auth.py  exports.py  jobs.py  scrape.py  system.py
src/scrape_api_docs/api/services/: __init__.py  export_service.py  job_service.py  scraper_service.py
src/scrape_api_docs/exporters/: __init__.py  api_detector.py  base.py  content_parser.py  epub_exporter.py  html_exporter.py  json_exporter.py  orchestrator.py  pdf_exporter.py
tests/: QUICK_START_TESTING.md  README.md  README_STOPLIGHT_TESTS.md  __init__.py  conftest.py  pytest.ini  requirements.txt  run_stoplight_tests.sh  test_api.py  test_async_scraper.py  test_github_integration.py  test_hybrid_renderer.py  test_playwright_pool.py  test_spa_detector.py  test_stoplight_basic.py  test_stoplight_integration.py  test_stoplight_manual.py  test_stoplight_scraper.py
tests/e2e/: test_cli_e2e.py
tests/exporters/: __init__.py  test_base.py  test_json_exporter.py  test_orchestrator.py
tests/fixtures/: stoplight_fixtures.py
tests/integration/: test_http_integration.py  test_parsing_integration.py
tests/security/: test_input_validation.py  test_ssrf_prevention.py
tests/unit/: test_cli.py  test_config.py  test_github_scraper.py  test_rate_limiter.py  test_robots.py  test_scraper.py  test_security.py  test_streamlit_app.py
